added Post and Files Schema

--- a/config/dev.env
+++ b/config/dev.env
@@ -2,7 +2,15 @@ MongodbUrl=mongodb+srv://vasutech:ramram1@cluster0.gj9t8.mongodb.net/?retryWrite
 port=4000
 bucket_name=appdata-bucket
 bucket_region=ap-south-1
-bucket_accesskey=AKIARDJVFOGQK3Y5MVEC
-bucket_secretkey=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
+bucket_accesskey=AKIARDJVFOGQKZXSVDNT
+bucket_secretkey=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
 redis_password=gUbY6TwMtma2SKaLG3uPMqkvQDaHY8ay
 redis_url=redis-13020.c262.us-east-1-3.ec2.cloud.redislabs.com
+API_KEY=AIzaSyA4pJfok5QWIMWgEhY_xaIeQLUHaY7UjoY
+AUTH_DOMAIN=reacttasklistapp.firebaseapp.com
+PROJECT_ID=reacttasklistapp
+STORAGE_BUCKET=reacttasklistapp.appspot.com
+MESSAGING_SENDER_ID=970743689588
+APP_ID=1:970743689588:web:97a6eb69d0bd2e30923c21
+DATABASE_URL=https://rnproj-de4b3-default-rtdb.firebaseio.com
+MEASUREMENT_ID=G-534S954VFR
