--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "firebase-admin": "^11.7.0",
     "mongoose": "^6.6.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
